...
"account.reveal.prompt" = "Authenticate to reveal";
"account.expiry_date.information" = "Your plan will expire on %@.";
"account.expiry_date.expired" = "Your plan has expired.";
"account.update.email.require.password.title" = "PIA Password Required";
"account.update.email.require.password.message" = "For security reasons we require your PIA password to perform a change in your account. Please input your PIA password to proceed.";
"account.update.email.require.password.button" = "Submit";
"account.error.unauthorized" = "Your username or password is incorrect.";
"account.subscriptions.message" = "You can manage your subscription from here.";
"account.subscriptions.linkMessage" = "here.";
"account.set.email.error" = "There was an error adding email. Please try again later.";
"account.subscriptions.short.message" = "Manage subscription";
"account.subscriptions.short.linkMessage" = "Manage subscription";
"account.subscriptions.yearly" = "Yearly plan";
...
"dashboard.vpn.change_location.alert.message" = "Your VPN will briefly disconnect while connecting to the new location.";
"dashboard.vpn.change_location.alert.button.connect" = "Connect";

// VPN PERMISSION

"vpn_permission.title" = "PIA";
"vpn_permission.body.title" = "PIA needs access to your VPN profiles to secure your traffic";
"vpn_permission.body.subtitle" = "You’ll see a prompt for PIA VPN and need to allow access to VPN configurations.\nTo proceed tap on “%@”.";
"vpn_permission.body.footer" = "We don’t monitor, filter or log any network activity.";
"vpn_permission.disallow.message.basic" = "We need this permission for the application to function.";
"vpn_permission.disallow.message.support" = "You can also get in touch with customer support if you need assistance.";
"vpn_permission.disallow.contact" = "Contact";

...
