...
        labelIP.text = server.wireGuardAddressesForUDP?.first?.ip ?? ""
        labelDedicatedIPTitle.text = L10n.Dedicated.Ip.title.uppercased()

        iconSelected = isSelected

        prepareCellIcons()
        accessibilityIdentifier = "uitests.regions.region_name"

        self.favoriteImageView.image = self.favoriteImageView.image?.withRenderingMode(.alwaysTemplate)

        self.isFavorite = server.isFavorite
        self.updateFavoriteImage()

...
