...
        //labelRedeem1.text = L10n.Welcome.Login.Redeem.footer
        //labelRedeem2.text = L10n.Welcome.Login.Redeem.button
        buttonRestorePurchase.setTitle(L10n.Welcome.Login.Restore.button, for: .normal)
        buttonRestorePurchase.titleLabel?.textAlignment = .center
        buttonRestorePurchase.titleLabel?.numberOfLines = 0

        buttonLogin.accessibilityIdentifier = "uitests.login.submit"
        viewPurchase.accessibilityLabel = "\(labelPurchase1.text!) \(labelPurchase2.text!)"
        textUsername.text = preset.loginUsername
        textPassword.text = preset.loginPassword
    }

    override func viewWillAppear(_ animated: Bool) {
...
