...
                cell.fillVersion(withTitle: title)
            } else {
                cell.fill(withTitle: title, icon: iconAsset.image)
            }
            switch item {
            case .account:
                cell.accessibilityIdentifier = "uitests.menu.account"

            case .logout:
                cell.accessibilityIdentifier = Accessibility.Id.Menu.logout

            default:
                break
...
